RESULTS/AutoSpec/raw_results/out-4o-oopsla-mx/out/absolute_value_0001/absolute_value_merged.txt
/home/dimpling/AutoSpec/out/absolute_value_0001/absolute_value_merged.c:12:1: error: unterminated comment
   12 | /*@;
      | ^
